fix overflow bug in cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,9 @@ header {
     main {
         flex-direction: column;
     }
+    .uk-card {
+         white-space: normal;
+    }
     #forecast {
         flex-direction: column;
     }
